[gd_scene load_steps=3 format=2]

[ext_resource path="res://Mapas/skyTestV2.tscn" type="PackedScene" id=1]
[ext_resource path="res://Niveles/NivelOnline.gd" type="Script" id=2]

[node name="Node" type="Node"]
script = ExtResource( 2 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 1 )]

[node name="CheckEnd" type="Timer" parent="."]
autostart = true

[node name="Positions" type="Node" parent="."]

[node name="Position_1" type="Position2D" parent="Positions"]
position = Vector2( 41.5304, 67.9589 )

[node name="Position_2" type="Position2D" parent="Positions"]
position = Vector2( 994.843, 558.773 )

[connection signal="timeout" from="CheckEnd" to="." method="_on_CheckEnd_timeout"]
